--- a/src/index.css
+++ b/src/index.css
@@ -7,17 +7,17 @@
 
 @font-face {
     font-family: 'Roboto Thin';
-    src: url('roboto/Roboto-Thin.ttf') format('truetype');
+    src: url('font/Roboto-Thin.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Roboto Light';
-    src: url('roboto/Roboto-Light.ttf') format('truetype');
+    src: url('font/Roboto-Light.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Roboto Regular';
-    src: url('roboto/Roboto-Regular.ttf') format('truetype');
+    src: url('font/Roboto-Regular.ttf') format('truetype');
 }
 
 * {
@@ -140,7 +140,6 @@ body {
     width: 24px;
     border: none;
     background-color: var(--main);
-    background-image: url('img/cross.png');
     background-repeat: no-repeat;
     background-position: 8px 8px;
     transition: all 0.1s;
@@ -154,4 +153,16 @@ body {
 .titlebar-btn:active {
     transform: scale(0.95);
     background-color: var(--dark);
+}
+
+.min-btn {
+    background-image: url('img/min.png');
+}
+
+.max-btn {
+    background-image: url('img/max.png');
+}
+
+.cross-btn {
+    background-image: url('img/cross.png');
 }
